--- a/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
+++ b/Practica3/memoria/PRACTICA_03_GRUPO_01.tex
@@ -126,7 +126,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-14}
     \end{figure}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): Casos confirmados en 7 días *100.000 / número de habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 1 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en 7 días} (IA-7): Casos confirmados en 7 días *100.000 / número de habitantes. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     
     \begin{figure}[!h]
       \centering
@@ -135,7 +135,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-7}
     \end{figure}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): Casos >= 65 años confirmados en 14 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 2 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 14 días} (IA-14 65): Casos >= 65 años confirmados en 14 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-14 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     
     \begin{figure}[!h]
       \centering
@@ -144,7 +144,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-14 65}
     \end{figure}
 
-    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): Casos >= 65 años confirmados en 7 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 3 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Incidencia acumulada de casos diagnosticados en Incidencia acumulada de casos con 65 o más años diagnosticados en 7 días} (IA-7 65): Casos >= 65 años confirmados en 7 días *100.000 / número de habitantes >= 65 años. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{IA-7 65} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     
     \begin{figure}[!h]
       \centering
@@ -153,7 +153,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{IA-7 65}
     \end{figure}
 
-    \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): Número de pruebas con resultado positivo en 7 días *100 / Número de pruebas realizadas en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 4 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Positividad global de las PDIA (Prueba Diagnóstica de Infección Activa) por semana} (PDIA): Número de pruebas con resultado positivo en 7 días *100 / Número de pruebas realizadas en 7 días. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{PDIA} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     
     \begin{figure}[!h]
       \centering
@@ -162,7 +162,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{PDIA}
     \end{figure}
 
-    \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): Número de camas de cuidados críticos ocupadas por casos de COVID / Número de camas de cuidados críticos totales en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 5 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Ocupación de camas de cuidados críticos por casos de COVID-19} (UCI): Número de camas de cuidados críticos ocupadas por casos de COVID / Número de camas de cuidados críticos totales en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{UCI} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     
     \begin{figure}[!h]
       \centering
@@ -171,7 +171,7 @@ Tras un estudio meticuloso de las variables relevantes en la tarea que se trata 
       \label{UCI}
     \end{figure}
 
-    \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas):  Número de camas de hospitalización ocupadas por casos de COVID / Número total de camas de hospitalización en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura 6 muestra los intervalos de cada uno de los posibles valores de forma gráfica.
+    \item \textbf{Ocupación de camas de hospitalización por casos de COVID-19} (Camas):  Número de camas de hospitalización ocupadas por casos de COVID / Número total de camas de hospitalización en funcionamiento. Sus posibles valores son: \textit{Muy Bajo}, \textit{Bajo} \textit{Medio }, {\textit{Alto}} y {\textit{Muy Alto}}. La figura~\ref{Camas} muestra los intervalos de cada uno de los posibles valores de forma gráfica.
     
     \begin{figure}[!h]
       \centering
@@ -348,15 +348,80 @@ Todas las reglas son del tipo \textit{AND}.
 \section{Validación del sistema}
 
   \subsection{Confinamiento}
+    \begin{center}
+      \hspace{-13mm}
+    \begin{tabular}{c|c|c|c|c|c|c|c|c|}
+      \cline{2-9}
+                                    & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Prob. Confinar} \\ \hline
+    \multicolumn{1}{|c|}{Prueba 1} & 300 & 200 & 200 & 100 & 23 & 28 & 18 & 0.8571 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 2} & 400 & 150 & 150 & 200 & 29 & 23 & 15 & 0.8571 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 3} & 160 & 80 & 110 & 55 & 11 & 16 & 11 & 0.6936 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 4} & 240 & 120 & 140 & 70 & 14 & 23 & 14 & 0.7550 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 5} & 55 & 30 & 60 & 35 & 8 & 11 & 6 & 0.5427 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 6} & 60 & 40 & 50 & 40 & 9 & 14 & 8 & 0.6622 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 7} & 30 & 15 & 30 & 13 & 5 & 7 & 3 & 0.1709 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 8} & 40 & 20 & 40 & 20 & 7 & 9 & 4 & 0.2129 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 9} & 5 & 3 & 2 & 2 & 1 & 2 & 0 & 0.1458 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 10} & 20 & 9 & 15 & 9 & 3 & 4 & 2 & 0.2158 \\ \hline
+    \end{tabular}
+    \end{center}
+
+    \vspace{2mm}
+
+    \begin{center}
+      \hspace{-13mm}
+    \begin{tabular}{c|c|c|c|c|c|c|c|c|}
+      \cline{2-9}
+                                    & IA-14 & IA-7 & IA-14 65 & IA-7 65 & PDI & UCI & Camas & \textbf{Prob. Confinar} \\ \hline
+    \multicolumn{1}{|c|}{Prueba 1} & 100 & 100 & 15 & 60 & 8 & 7 & 12 & 0.7755 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 2} & 5 & 21 & 125 & 5 & 2 & 25 & 4 & 0.8164 \\ \hline
+    \multicolumn{1}{|c|}{Prueba 3} & 200 & 25 & 75 & 20 & 4 & 13 & 16 & 0.6410 \\ \hline
+    \end{tabular}
+    \end{center}
 
   \subsection{Prueba PCR}
-
-
+    
+    \begin{center}
+    \begin{tabular}{c|c|c|c|c|c|c|c|c|c|}
+      \cline{2-10}
+                                    & DDPS & \begin{tabular}[c]{@{}c@{}}Prueba\\ Rápida\end{tabular} & PCR & UCI & \begin{tabular}[c]{@{}c@{}}Sospecha\\ Clínica\end{tabular} & DDCP & Síntomas & UMNC & \begin{tabular}[c]{@{}c@{}}\textbf{Prob.}\\ \textbf{Realizar}\\ \textbf{PCR}\end{tabular} \\ \hline
+    \multicolumn{1}{|c|}{Regla 1} & 1.5 & 0.5 & 0.5 & 0 & 0.1 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 2} & 3.0 & 0.5 & 0.5 & 0 & 0.2 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 3} & 4.5 & 0.5 & 0.5 & 0 & 0.3 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 4} & 6.0 & 0 & 0.5 & 0 & - & 0.4 & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 5} & 7.5 & 0.5 & 0 & 0 & - & 0.5 & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 6} & 9.0 & 1.0 & 1.0 & 1.0 & 0.5 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 8} & 10.5 & 1.0 & 1.0 & 1.0 & 0.5 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 8} & 12.0 & 1.0 & 1.0 & 1.0 & 0.6 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 9} & 13.5 & 1.0 & 1.0 & 1.0 & 0.7 & - & - & - & - \\ \hline
+    \multicolumn{1}{|c|}{Regla 10} & 15.0 & 1.0 & 1.0 & 1.0 & 0.8 & - & - & - & - \\ \hline
+    \end{tabular}
+    \end{center}
+  
+  \subsection{Analisis de los resultados}
 
 \section{Conclusiones}
 
-\clearpage
-
+  A lo largo del desarrollo de esta práctica se ha profundizado en la técnica de \textit{Lógica Difusa}, la misma presenta un enfoque bien diferenciado de otras técnicas de Inteligencia Artificial, puesto que permite la resolución de problemas para los cuales no existe una alternativa eficiente que sea \textbf{capaz de trabajar con la incertidumbre humana}. Por todo ello, esta práctica resulta de utilidad si se pretende introducirse en ese mundo de manera sucinta. Sin embargo, también impone la resolución de unos retos que deben ser solucionados si se pretende afrontar aplicaciones reales. 
+  
+  \vspace{2mm}
+  
+  Entre las principales desventajas o retos que acarrea esta técnica está la \textbf{dificultad de establecer reglas} exactas así como los distintos intervalos de cada una de las variables para disponer de un sistema lo más fiel posible. Esto es así debido a las propias características de la lógica difusa, puesto que al ser capaz de trabajar con la incertidumbre humana pierde la capacidad de detectar patrones inadvertidos a los humanos como sí pueden encontrar, por ejemplo, las redes de neuronas.
+      
+  \vspace{2mm}
+  
+  
+  Otra piedra en el camino a la hora de realizar una tarea de lógica difusa con éxito consiste en encontrar una \textbf{fuente fiable de conocimiento} para posibilitar la creación de reglas y casos de prueba, lo cual se pone de manifiesto en situaciones tan caóticas como la epidemia de \textit{SARS-CoV-2}. 
+  
+  \vspace{2mm}
+  
+  A pesar de sus múltiples desventajas,la lógica difusa es una técnica especialmente útil especialmente si se contrasta con otras técnicas conocidas como caja negra, es \textbf{extremadamente fácil obtener explicaciones} sobre los resultados en base a las reglas activadas.
+  
+  \vspace{2mm}
+  
+  A modo de conclusión se destaca la importancia de disponer de distintas herramientas de Inteligencia Artificial que permitan su aplicación en situaciones bien diferenciadas, permitiendo de esta manera seleccionar la técnica que mejor se adapte a lo que se pretende obtener en cada momento. Puesto que no existen técnicas universales la tarea de un ingeniero experto en Inteligencia Artificial debe ser la seleccionar el conjunto de técnicas que mejor funcione en cada momento.
+  
+\clearpage 
 
 \bibliographystyle{ieeetr}
 \bibliography{bibliografia.bib}
