--- a/Practica3/memoria/bibliografia.bib
+++ b/Practica3/memoria/bibliografia.bib
@@ -35,3 +35,23 @@
   volume = {3},
   journal = {Computer Technology and Application}
 }
+
+@article{fuzzytrain,
+  title={DEVELOPMENT OF A HYBRID FUZZY GENETIC ALGORITHM MODEL FOR SOLVING TRANSPORTATION SCHEDULING PROBLEM},
+  author={H. Lau and D. Nakandala and L. Zhao},
+  journal={Journal of Information Systems and Technology Management},
+  year={2016},
+  volume={12},
+  pages={505-524}
+}
+
+@article{fuzzyfashion,
+author = {Wong, W.K. and Zeng, X.H. and Au, W.M.R. and Mok, Tracy and Leung, S.},
+year = {2009},
+month = {03},
+pages = {1750-1764},
+title = {A fashion mix-and-match expert system for fashion retailers using fuzzy screening approach},
+volume = {36},
+journal = {Expert Syst. Appl.},
+doi = {10.1016/j.eswa.2007.12.047}
+}
